--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <!-- 구글 마테리얼 아이콘 -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
+        <link rel="stylesheet" href="./css/common.css" />
         <link rel="stylesheet" href="./css/main.css" />
 
         <!-- lodash 라이브러리 -->
@@ -63,6 +64,7 @@
         ></script>
 
         <script defer src="./js/yotube.js"></script>
+        <script defer src="./js/common.js"></script>
         <script defer src="./js/main.js"></script>
     </head>
     <body>
